--- a/3.alert창/1.html
+++ b/3.alert창/1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 시작</title>
+    <title>자바스크립트</title>
     <script>
-        document.write("Hello World")
+        alert('12*6='+12*6)
     </script>
 </head>
 <body>
