--- a/38.화면(모니터)크기 알아내기/1.html
+++ b/38.화면(모니터)크기 알아내기/1.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        
+        document.write("value of screen.width is" + screen.width)
+        document.write("<br>")
+        document.write("value of screen.height is" + screen.height)
+        document.write("<br>")
+        document.write("value of screen availWidth is" + screen.availWidth)
+        document.write("<br>")
+        document.write("value of screen.availHeight is" + screen.availHeight)
     </script>
 </head>
 <body>
